<resources>
    <string name="button_new_game">Add game</string>
    <string name="button_new_group">Add group</string>
    <string name="str_game_name_fmt">%1$s (%2$s)</string>
    <string name="robot_name_fmt">%1$s (robot)</string>
    <string name="missing_player">(not here yet…)</string>
    <string name="summary_relay_conf_fmt">Configured for room
      \"%1$s\"</string>
    <string name="summary_relay_wait_fmt">Waiting for players in room
      \"%1$s\"</string>
    <string name="summary_relay_conn_fmt">Game in play in room \"%1$s\"</string>
    <string name="summary_relay_gameover_fmt">Game over in room \"%1$s\"</string>
    <string name="summary_invites_out">Players invited</string>
    <string name="gameOver">Game over</string>
    <plurals name="moves_fmt">
      <item quantity="one">%1$d move played</item>
      <item quantity="other">%1$d moves played</item>
    </plurals>
    <string name="button_delete">Delete</string>
    <string name="button_reset">Reset</string>
    <string name="gamel_menu_dicts">Wordlists…</string>
    <string name="menu_prefs">App Settings…</string>
    <string name="gamel_menu_checkmoves">Check for moves</string>
    <string name="msgs_progress">Checking relay for moves
      etc…</string>
    <string name="no_games_to_refresh">No games found that connect via
      the relay.</string>
    <string name="board_menu_file_about">About Crosswords…</string>
    <string name="game_item_menu_title_fmt">\"%1$s\" actions:</string>
    <string name="list_item_config">Game settings…</string>
    <string name="list_item_rename">Rename…</string>
    <string name="list_item_move">Move to group…</string>
    <string name="list_item_delete">Delete game</string>
    <string name="list_item_reset">Reset\u200C</string>
    <string name="list_item_new_from">New from</string>
    <string name="list_item_copy">Copy</string>
    <string name="no_copy_network">Games that have already connected
      to the relay cannot be copied. Use \"New from\" for a
      ready-to-play copy with all the same settings.</string>
    <string name="game_rename_title">Rename game</string>
    <string name="rename_label">Change the name of this game to:</string>
    <string name="rename_label_caveat">Change the name of this game
    (on this device only) to:</string>
    <plurals name="confirm_seldeletes_fmt">
      <item quantity="one">Are you sure you want to delete
      the selected game? This action cannot be undone.</item>
      <item quantity="other">Are you sure you want to delete
      the %1$d selected games? This action cannot be undone.</item>
    </plurals>
    <plurals name="confirm_reset_fmt">
      <item quantity="one">Are you sure you want to reset the
      selected game?\n\n(Resetting erases all moves and any connection
      information.)</item>
      <item quantity="other">Are you sure you want to reset the %1$d
      selected games?\n\n(Resetting erases all moves and any connection
      information.)</item>
    </plurals>
    <string name="title_dicts_list">Crosswords Wordlists</string>
    <string name="download_dicts">Download more languages…</string>
    <string name="loc_builtin">Built-in</string>
    <string name="loc_downloads">Downloads</string>
    <string name="dicts_item_move">Change storage location</string>
    <string name="dicts_item_select">Make default</string>
    <plurals name="confirm_delete_dict_fmt">
      <item quantity="one">Are you sure you want to delete the
      wordlist %1$s?</item>
      <item quantity="other">Are you sure you want to delete the
      wordlists %1$s?</item>
    </plurals>
    <string name="confirm_deleteonly_dicts_fmt">Deleting %1$s will
        leave you without any %2$s wordlists. One or more games will be
        unopenable (until you download a replacement list.)</string>
    <string name="set_default_message_fmt">For what players should the
    wordlist %1$s be the default for new games? (The language %2$s will be
    the default for both.)</string>
    <string name="button_default_human">Human</string>
    <string name="button_default_robot">Robot</string>
    <string name="button_default_both">Both</string>
    <string name="move_dict_fmt">Location for wordlist %1$s</string>
    <string name="loc_internal">Internal</string>
    <string name="loc_external">External</string>
    <string name="title_game_config_fmt">Settings for %1$s</string>
    <string name="title_gamenet_config_fmt">%1$s settings (networked)</string>
    <string name="title_langs_list">Languages (based on installed
      wordlists)</string>
    <string name="game_locked">Lock settings</string>
    <string name="players_label_standalone">Players (tap to edit)</string>
    <string name="players_label_host_fmt">Players (%1$d local, %2$d
      off-device)</string>
    <string name="button_add_player">Add player</string>
    <string name="button_juggle_players">Shuffle players</string>
    <string name="lang_label">Game language</string>
    <string name="langdict_label">Game language/wordlist</string>
    <string name="connect_label_fmt">Connection (via %1$s)</string>
    <string name="join_room">Join public room</string>
    <string name="new_room_hint">Room name</string>
    <string name="room_public">Make new room public</string>
    <string name="room_public_prompt">Select public room</string>
    <string name="public_names_progress_fmt">Fetching public rooms for
      %1$d-player games in %2$s.</string>
    <string name="no_name_found_fmt">No public rooms found for
      %1$d-player games in %2$s. Try refreshing or creating your
      own.</string>
    <string name="settings_label">Other settings</string>
    <string name="hints_allowed">Allow hints</string>
    <string name="nethints_allowed">Allow hints (networked)</string>
    <string name="use_timer">Enable game timer</string>
    <string name="minutes_label">Minutes per player</string>
    <string name="robot_spinner_prompt">How smart is the robot player?</string>
    <string name="robot_smart">Smart robot</string>
    <string name="robot_smarter">Smarter robot</string>
    <string name="robot_smartest">Smartest robot</string>
    <string name="phonies_spinner_prompt">How to handle \"phonies\"
        (words not in wordlist)</string>
    <string name="phonies_ignore">Ignore phonies</string>
    <string name="phonies_warn">Warn if phonies</string>
    <string name="phonies_disallow">Disallow phonies</string>
    <string name="str_reg_server_sans_remote">At least one player must
         be marked \"Remote\" for a game started as Host.</string>
    <string name="guest_name">(Off-device player)</string>
    <string name="confirm_save">This game is in play.  If you
      save these changes it must be restarted.  Do you want to save
      these changes?</string>
    <string name="confirm_save_title">Confirm save</string>
    <string name="play">Play game</string>
    <string name="force_title">Off-device player[s]</string>
    <string name="force_expl">In a multi-device game there must be at
    least one player from and another not from this device.  Please
    check off-device players.</string>
    <string name="forced_consistent">Modified first player.</string>
    <string name="player_edit_title">Edit player</string>
    <string name="remote_label">Off-device player</string>
    <string name="player_label">Name:</string>
    <string name="dict_lang_label_fmt">Wordlist (in %1$s)</string>
    <string name="dicts_list_prompt_fmt">Installed wordlists (in %1$s)</string>
    <string name="robot_label">Robot player</string>
    <string name="password_label">Password</string>
    <string name="button_trade_commit">Commit trade</string>
    <string name="button_trade_cancel">Cancel trade</string>
    <string name="entering_trade">Tap tiles to select…</string>
    <string name="bonus_l2x_summary">2L</string>
    <string name="bonus_w2x_summary">2W</string>
    <string name="bonus_l3x_summary">3L</string>
    <string name="bonus_w3x_summary">3W</string>
    <string name="no_moves_made">(No moves yet)</string>
    <plurals name="invite_msg_fmt">
      <item quantity="one">This game is waiting for %1$d remote
      player. Would you like to invite someone to join -- assuming you
      haven\'t already?</item>
      <item quantity="other">This game is waiting for %1$d remote
      players. Would you like to invite someone to join -- assuming
      you haven\'t already?</item>
    </plurals>
    <plurals name="invite_sent_fmt">
      <item quantity="one">You have already invited a remote player to
      this game. We are waiting for him/her to respond. Please
      use the re-invite button if you think the invitation did not go
      out.</item>
      <item quantity="other">You have already sent %1$d unique
      invitations for this game. We are waiting for %2$d of the
      recipients to respond. Please use the re-invite button if you
      think the invitations did not go out.</item>
    </plurals>
    <string name="invited_msg">This game was created from an
    invitation you received. As soon as it is able to connect to the
    sender and any other invitees have arrived play will
    begin.</string>
    <string name="invite_if_nfc">Or just Tap to Invite -- if the other
    device also has Android Beaming and is nearby.</string>
    <string name="invite_multiple">\u0020(You are expecting multiple
    remote players. You don\'t have to invite them all at once, but
    this alert will not be dismissed until everybody has been invited
    and all invitations have been accepted.)</string>
    <string name="newgame_local">Play now</string>
    <string name="newgame_configure_first">Configure first</string>
    <string name="newgame_networked_desc">Create a game that will be
      played over the network.  The \"Invite now\" button starts a
      two-device game and helps you invite a friend to join it.  Or
      press \"Configure first\" to change some of the defaults before
      you start your networked game. (You\'ll have a chance to send
      invites later.)</string>
    <string name="newgame_invite">Invite now</string>
    <string name="button_search">Find</string>
    <string name="word_search_hint">First letters</string>
    <string name="min_len">Min length</string>
    <string name="max_len">Max length</string>
    <string name="prompt_min_len">Words no shorter than</string>
    <string name="prompt_max_len">Words no longer than</string>
    <string name="bt_pick_clear_button">Remove checked</string>
    <string name="button_invite">Invite checked</string>
    <string name="button_sms_add">Import contact</string>
    <string name="button_relay_add">Scan games</string>
    <string name="empty_relay_inviter">This list of devices is
    empty. Use the \"Scan games\" button to scan your old games
    for opponents. Use the \"+\" button to enter device IDs directly.</string>
    <string name="xlations_enabled_title">Enable local translating</string>
    <string name="xlations_enabled_summary">Add option to every screen menu</string>
    <string name="network_advanced_title">Advanced</string>
    <string name="invite_multi_title">Invite multiple</string>
    <string name="invite_multi_summary">Invite more than one player per remote device</string>
    <string name="enable_pubroom_title">Enable public rooms</string>
    <string name="enable_pubroom_summary">Rooms others can see and join</string>
    <string name="button_edit">Edit</string>
  <string name="xlations_locale">Fake locale for translation</string>
  <string name="got_langdict_title">Fetch default wordlist for language</string>
  <string name="got_langdict_summary">Don\'t try a second time</string>
  <string name="pref_group_l10n_title">Localization Stuff</string>
  <string name="pref_group_l10n_summary">Prefs related to in-app localization</string>
  <string name="list_item_select">Select</string>
  <string name="list_item_deselect">De-select</string>
</resources>