<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              >
  <Button android:id="@+id/button_relay_add"
          android:text="@string/button_relay_add"
          style="@style/evenly_spaced_horizontal"
          />

  <ImageButton android:id="@+id/manual_add_button"
               android:layout_height="fill_parent"
               android:layout_width="wrap_content"
               android:src="@android:drawable/ic_input_add"
               android:clickable="false"
               />

  <Button android:id="@+id/button_clear"
          android:text="@string/bt_pick_clear_button"
          style="@style/evenly_spaced_horizontal"
          />
  <Button android:id="@+id/button_edit"
          android:text="@string/button_edit"
          style="@style/evenly_spaced_horizontal"
          />
</LinearLayout>
