<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent"
              android:paddingLeft="8dp"
              android:paddingRight="8dp"
              android:focusableInTouchMode="true"
              android:layout_weight="1"
              >

  <TextView android:id="@+id/desc"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:visibility="gone"
            android:layout_alignParentTop="true"
            />

  <LinearLayout android:id="@+id/search"
                android:orientation="horizontal"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_below="@id/desc"
                >
    <EditText android:id="@+id/word_edit" 
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:singleLine="true"
              android:layout_weight="1"
              android:hint="@string/word_search_hint"
              android:capitalize="characters"
              />

    <Button android:id="@+id/search_button"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:text="@string/button_search" 
            android:layout_weight="0"
            />
  </LinearLayout>

  <LinearLayout android:id="@+id/sizes"
                android:orientation="horizontal"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_alignParentBottom="true"
                >
    <TextView android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:text="@string/min_len" 
              />
    <Spinner android:id="@+id/wordlen_min"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawSelectorOnTop="true"
             android:prompt="@string/prompt_min_len"
             />
    <TextView android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:text="@string/max_len"
              />
    <Spinner android:id="@+id/wordlen_max"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawSelectorOnTop="true"
             android:prompt="@string/prompt_max_len"
             />
  </LinearLayout>

  <!-- This goes in the middle but gets listed here because stuff it's
       relative to must be defined first. -->
  <FrameLayout android:id="@+id/list_container"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_below="@id/search"
               android:layout_above="@id/sizes"
               android:layout_weight="1"
               />
</RelativeLayout>
