<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent"
              >

  <TextView android:id="@+id/invite_desc"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="8dp"
            />

  <ListView android:id="@id/android:list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:drawSelectorOnTop="false"
            android:layout_weight="1"
            android:padding="8dp"
            />

  <TextView android:id="@android:id/empty"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_relay_inviter"
            android:padding="20dp"
            />

  <Button android:id="@+id/button_invite"
          android:text="@string/button_invite"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dip"
          />

  <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                >
      <Button android:id="@+id/button_add"
              android:text="@string/button_relay_add"
              style="@style/evenly_spaced_horizontal"
              />
      <ImageButton android:id="@+id/manual_add_button"
                   android:layout_height="fill_parent"
                   android:layout_width="wrap_content" 
                   android:src="@android:drawable/ic_input_add"
                   android:clickable="false"
                   />
      <ImageButton android:id="@+id/add_self_button"
                   android:layout_height="fill_parent"
                   android:layout_width="wrap_content" 
                   android:src="@android:drawable/ic_input_add"
                   android:clickable="false"
                   android:visibility="gone"
                   />
      <Button android:id="@+id/button_clear"
              android:text="@string/bt_pick_clear_button"
              style="@style/evenly_spaced_horizontal"
              />
  </LinearLayout>

</LinearLayout>
