<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            >
  <LinearLayout android:orientation="vertical"
                android:layout_width="fill_parent" 
                android:layout_height="fill_parent"
                >

    <!-- local game -->
    <include layout="@layout/expander_header"
             android:id="@+id/newgame_local_header"
             />
    <LinearLayout android:orientation="vertical"
                  android:id="@+id/newgame_local_hideable"
                  android:layout_width="fill_parent" 
                  android:layout_height="wrap_content"
                  >
      <LinearLayout android:orientation="horizontal"
                    android:layout_width="fill_parent" 
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:layout_marginBottom="10dip"
                    >
        <ImageView android:src="@drawable/sologame"
                   style="@style/newgame_connicon"
                   />
        <TextView android:id="@+id/newgame_local_desc"
                  style="@style/relay_explain"
                  />
      </LinearLayout>

      <LinearLayout android:orientation="horizontal"
                    android:layout_width="fill_parent" 
                    android:layout_height="wrap_content"
                    >
        <Button android:id="@+id/newgame_local"
                android:text="@string/newgame_local" 
                style="@style/evenly_spaced_horizontal"
                />
        <Button android:id="@+id/newgame_local_config"
                android:text="@string/newgame_configure_first" 
                style="@style/evenly_spaced_horizontal"
                />
      </LinearLayout>
    </LinearLayout>

    <!-- networked game -->
    <include layout="@layout/expander_header"
             android:id="@+id/newgame_relay_header"
             />
	<!-- Wrapper so can show/hide -->
    <LinearLayout android:orientation="vertical"
                  android:id="@+id/newgame_networked_hideable"
                  android:layout_width="fill_parent" 
                  android:layout_height="wrap_content"
                  >
      <LinearLayout android:orientation="horizontal"
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:layout_marginTop="10dip"
					android:layout_marginBottom="10dip"
					>
		<ImageView android:src="@drawable/relaygame"
                   style="@style/newgame_connicon"
                   />
		<TextView android:text="@string/newgame_networked_desc"
                  style="@style/relay_explain"
                  />
      </LinearLayout>

      <LinearLayout android:orientation="horizontal"
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					>
		<Button android:id="@+id/newgame_net_invite"
				android:text="@string/newgame_invite" 
				style="@style/evenly_spaced_horizontal"
				/>

		<Button android:id="@+id/newgame_net_config"
				android:text="@string/newgame_configure_first" 
				style="@style/evenly_spaced_horizontal"
				/>
      </LinearLayout>
	</LinearLayout>

  </LinearLayout>
</ScrollView>

