<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent"
              >

  <TextView android:id="@+id/invite_desc"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="8dp"
            />

  <ListView android:id="@id/android:list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:drawSelectorOnTop="false"
            android:layout_weight="1"
            android:padding="8dp"
            />

  <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >
    <EditText android:id="@+id/phone_edit"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:scrollHorizontally="true"
              android:phoneNumber="true"
              android:singleLine="true"
              android:maxLength="15"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:layout_weight="1"
              android:hint="@string/manual_number_hint"
              />
    <ImageButton android:id="@+id/manual_add_button"
                 android:layout_width="wrap_content" 
                 android:layout_height="wrap_content"
                 android:src="@android:drawable/ic_input_add"
                 android:gravity="right"
                 android:layout_weight="0"
                 android:visibility="invisible"
                 />
  </LinearLayout>

  <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                >
      <Button android:id="@+id/button_add"
              android:text="@string/button_sms_add"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1" 
              />
      <Button android:id="@+id/button_clear"
              android:text="@string/bt_pick_clear_button"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              />
  </LinearLayout>

  <Button android:id="@+id/button_invite"
          android:text="@string/button_invite"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          />

</LinearLayout>
