<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
     
     http://www.apache.org/licenses/LICENSE-2.0
     
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
            android:id="@+id/screen"
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent"
            android:orientation="vertical">

  <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

    <CheckBox android:id="@+id/remote_check"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/remote_label"
              />

    <!-- Use a layout to group elems we want to show/hide as a set -->
    <LinearLayout android:id="@+id/local_player_set"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:orientation="vertical">

      <TextView android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:text="@string/player_label"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />
      
      <EditText android:id="@+id/player_name_edit"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:scrollHorizontally="true"
                android:autoText="false"
                android:capitalize="words"
                android:selectAllOnFocus="true"
                android:gravity="fill_horizontal"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                />

      <TextView android:id="@+id/dict_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />
      
      <Spinner android:id="@+id/dict_spinner"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:drawSelectorOnTop="true"
               />

      <CheckBox android:id="@+id/robot_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/robot_label"
                />

      <LinearLayout android:id="@+id/password_set"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:orientation="vertical">


        <TextView android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:layout_marginLeft="20dip"
                  android:layout_marginRight="20dip"
                  android:text="@string/password_label"
                  android:gravity="left"
                  android:textAppearance="?android:attr/textAppearanceMedium" 
                  />
        
        <EditText android:id="@+id/password_edit"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:layout_marginLeft="20dip"
                  android:layout_marginRight="20dip"
                  android:scrollHorizontally="true"
                  android:autoText="false"
                  android:capitalize="none"
                  android:gravity="fill_horizontal"
                  android:password="true"
                  android:singleLine="true"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  />
      </LinearLayout>
    </LinearLayout>
  </LinearLayout>
</ScrollView>
